update air quality analysis

--- a/air_quality.ipynb
+++ b/air_quality.ipynb
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "aqi_data = pd.read_csv(\"AQI Data.csv\")\n",
+    "aqi_data = pd.read_csv(\"air_quality_data.csv\")\n",
     "aqi_data.sample(5)"
    ]
   },
