--- a/fire report analysis.ipynb
+++ b/fire report analysis.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyzing Fire Reports"
+    "# Analyzing Fire Reports\n",
+    "##### Alexander Victoria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "One aspect that makes a neighborhood safe is the risk of fires from other buildings spreading throughout the community. A good way to understand if a certain community is at risk of this is to look at all the fire reports for every community in Pittsburgh. Using the fire-reports.csv that was obtained from the WPRDC's online database, I will find the safest community at least risk of fire damage based one number of reports."
    ]
   },
   {
@@ -225,11 +234,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Personal Conclusion \n",
+    "Based on the data we found South Fayette to be the best community in Pittsburgh. It ranked very highly in two of the three metrics, and decently in the last so I believe that based on our metrics this is the safest community. However, being from Pittsburgh, I have a different opinion on what the best community is. I grew up in Greenfield so I will always be biased towards it. I feel that Greenfield has a strong sense of community because many of the people who live there have lived there for their entire lives which brings the community together more. Additionally, being only a few minutes away from Oakland, Squirrel Hill, Downtown, and Monroville means that Greenfield has a great location to access the city of Pittsburgh. Lastly, while being near Oakland and Squirrel Hill, Greenfield does not have the same downsides of high traffic, no space, and very expensive housing. It is the opposite, making it the perfect community. "
+   ]
   }
  ],
  "metadata": {
