all individual conclusions added

--- a/Final-Report.ipynb
+++ b/Final-Report.ipynb
@@ -1758,15 +1758,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf0d2ac2-c32b-4d98-9547-69fd28cb67c6",
+   "id": "31ca08ab-6edd-464d-bddc-d10e7e5dc0b0",
    "metadata": {},
    "source": [
-    "* From our three metrics none of our best neighborhoods are the same. Because of this we will have to move down the list to find the area that ranked highest on average.\r\n",
-    "* From the drug overdose data we found that the zip code **15031** is tied for the safest zip code. **15031** covers and area named **Cuddy, PA**.\r\n",
-    "* **Cuddy, PA** is located inside of **South Fayette, PA**, which ranked eighth overall for best air quality meaning for these two metrics the best Neighborhood is **South Fayette**\r\n",
-    "* The fire report data did not include **South Fayette**, however just outside of **South Fayette** is **East Carnegie** which ranked third overall in fewest fire reports.\r\n",
-    "* Based on these metrics we found **South Fayette** to be the best neighborhood in Pittsburgh because it is the safest.\r\n",
-    "st.\r\n"
+    "* From our three metrics none of our best neighborhoods are the same. Because of this we will have to move down the list to find the area that ranked highest on average.\n",
+    "* From the drug overdose data we found that the zip code **15031** is tied for the safest zip code. **15031** covers and area named **Cuddy, PA**.\n",
+    "* **Cuddy, PA** is located inside of **South Fayette, PA**, which ranked eighth overall for best air quality meaning for these two metrics the best Neighborhood is **South Fayette**\n",
+    "* The fire report data did not include **South Fayette**, however just outside of **South Fayette** is **East Carnegie** which ranked third overall in fewest fire reports.\n",
+    "* Based on these metrics we found **South Fayette** to be the best neighborhood in Pittsburgh because it is the safest."
    ]
   },
   {
@@ -1776,16 +1775,9 @@
    "source": [
     "# Individual Conclusions\n",
     "* **Alexander**: Based on the data we found South Fayette to be the best community in Pittsburgh. It ranked very highly in two of the three metrics, and decently in the last so I believe that based on our metrics this is the safest community. However, being from Pittsburgh, I have a different opinion on what the best community is. I grew up in Greenfield so I will always be biased towards it. I feel that Greenfield has a strong sense of community because many of the people who live there have lived there for their entire lives which brings the community together more. Additionally, being only a few minutes away from Oakland, Squirrel Hill, Downtown, and Monroville means that Greenfield has a great location to access the city of Pittsburgh. Lastly, while being near Oakland and Squirrel Hill, Greenfield does not have the same downsides of high traffic, no space, and very expensive housing. It is the opposite, making it the perfect community. \n",
-    "* **Augustine**: After analyzing the dataset and reflecting on my favorite neighborhood, West Mifflin, here are my thoughts: the data ranked Lawrenceville 2 as the best neighborhood due to its low average AQI, but it does not clarify how Lawrenceville 2 differs from Lawrenceville, which ranked as the worst. This lack of metadata makes it challenging to understand the significant discrepancy between the two. The limitations of the dataset highlight the need for more detailed information to draw meaningful conclusions. West Mifflin ranked second, reflecting its favorable air quality, and it remains my personal favorite due to my experience at CCAC South Campus. I appreciate its calm atmosphere and the availability of shops and amenities, which add to its appeal. While the data provides valuable insights into air quality, it overlooks qualitative factors like personal experiences, convenience, and community, which are equally important in evaluating a neighborhood's overall livability."
+    "* **Augustine**: After analyzing the dataset and reflecting on my favorite neighborhood, West Mifflin, here are my thoughts: the data ranked Lawrenceville 2 as the best neighborhood due to its low average AQI, but it does not clarify how Lawrenceville 2 differs from Lawrenceville, which ranked as the worst. This lack of metadata makes it challenging to understand the significant discrepancy between the two. The limitations of the dataset highlight the need for more detailed information to draw meaningful conclusions. West Mifflin ranked second, reflecting its favorable air quality, and it remains my personal favorite due to my experience at CCAC South Campus. I appreciate its calm atmosphere and the availability of shops and amenities, which add to its appeal. While the data provides valuable insights into air quality, it overlooks qualitative factors like personal experiences, convenience, and community, which are equally important in evaluating a neighborhood's overall livability.\n",
+    "* **Patrick** The dataset provides valuable insights into overdose trends, including demographics, commonly involved drugs, and locations. It shows important trends, like how common drugs like fentanyl are, which can be used as a basis for public health policies. Even though more information, like specifics about the situation or differences in the area, would make the research better, the data is a good place to start when looking for ways to improve community health."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738e1cff-d573-4475-9b43-f83d74281397",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
