--- a/Overdose_analysis.ipynb
+++ b/Overdose_analysis.ipynb
@@ -417,7 +417,7 @@
    "id": "4c68c921-e189-44c6-981a-348562921959",
    "metadata": {},
    "source": [
-    "- The best zip code to live in would be 15668,15031,150 with 6 overdoses \n",
+    "- The best zip code to live in would be 15668,15031,15026, 15656 with 6 overdoses \n",
     "- The worst zip code to live in would be 15210 with 373 overdoses "
    ]
   },
